# callmemaybe

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
src/: __main__.py  call_me_maybe.py  constrained_decoder.py  defines.py  function_selector.py  loader.py  models.py  parameter_selector.py  prompt_builder.py  tokenizer.py  writer.py
