[project]
name = "call-me-maybe"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic",
    "llm_sdk",
    "flake8",
    "mypy"
]

[tool.uv.sources]
llm_sdk = { path = "./llm_sdk" }

[tool.mypy]
python_version = "3.13"
exclude = [
    '^\.venv/',
    '/\.venv/'
]

[[tool.mypy.overrides]]
module = "llm_sdk"
ignore_errors = true
